2014-08-18  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* ofonts.test: Fix parallel tests.

2014-08-17  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* ligkern_routines.c, out_routines.h, ligkern.test: Detect
	unused parts of OFM ligkern program.
	* tests/arabic.ovp: Use more than 64k ligkern steps.
	* tests/liguse{,1,2}.opl (new): Additional test data.
	* Makefile.am: Add the new test data.

2014-08-15  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* print_routines.c (print_ofm_level), tests/*.opl, tests/*.ovp:
	Output OFMLEVEL in hex (as in Web2C version).

	* char_routines.c, ligkern_routines.[ch], manifests.h,
	print_routines.[ch]: Handle BOUNDARYCHAR.

	* ligkern.test, tests/lig{all,bch,bdy,blb}.opl,
	tests/ligblv.{opl,ovp}, tests/ligloop1.{ofm,opl},
	tests/ligloop2.opl: Shell script and data for a new test.
	* Makefile.am: Add the new test.

2014-08-10  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* ligkern_routines.c (l_hash_input): Fixed another bug.

2014-08-09  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* ligkern_routines.c (l_hash_lookup): Fixed a bug in checking
	for infinite ligature loops.

2014-08-08  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* char_routines.c: Compute checksum as in Web2C version.
	* ligkern_routines.[ch], list_routines.[ch]: Handle very long
	ligature programs.

	* yannis.test, tests/arabicr.pl, tests/arabic.ovp (new):
	Shell script and data for a new test.
	* Makefile.am: Add the new test.

2014-08-05  Peter Breitenlohner  <peb@mppmu.mpg.de>

	General cleanup.
	* char_routines.[ch], dimen_routines.[ch], error_routines.[ch],
	font_routines.[ch], header_routines.[ch], ligkern_routines.[ch],
	list_routines.[ch], omfonts.[ch], out_ofm.[ch],
	out_routines.[ch], param_routines.[ch], parse_ofm.[ch],
	print_routines.[ch]: Drop unused code.
	Declare functions with file scope as static.

2014-08-04  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* char_routines.c: Compute checksum.
	* header_routines.[ch]: Drop more unused code.